* fix map names in revised and lhtr (Jeffrey Henning)

* add lhtr victory citries (sgb)

* super subs defend at 3 in lhtr (sgb)

* make lhtr aa guns not fire in non combat move (sgb)

* pacific and europe map fixes (Opurt, FlyingSpaghettiMonster)

Changes for 0.8.2.1

* fix installer with embedded java to actually use the embedded java (sgb)

* default sound to off (sgb)

* fix nz territory in four if by sea (rod the god)

Changes for 0.8.2

* fix bug where observers joining mid game may ignore some updates (sgb)

* lock game data before switching to history (sgb)

* fix bug where casualty selection would sometimes appear before the battle panel (sgb)

* fix bug where naval bombardment doesnt work for the first player to fight in round 0 (sgb)

* change two if by sea to four if by sea (rod the god)

* remove nuetral player in capture the flag (sgb)

Changes for 0.8.1

* add capture the flag map (iron cross)

* let ai place in places other than the capitol if not all units can be placed in the capitol (sgb)

* fix move bug when no units are selected with pop up (sgb)

* fix "Not enough units in starting territory" bug when hitting done (sgb)

* documentation updates (sgb)

* fix history update bug in multiplayer (sgb)

* fix bug where if A has 1 carrier and no fighters in a sea zone and is allied to B with 1 carrier and 3 fighters in the saem sea zone, when A moves his carrier out of the sea zone, B's 1 fighter doesnt move with it (if A moved his carrier in the sea zone after B moved his carrier into the sea zone)

* show strategic bombing raid casualty notification (sgb)

* fixed bug where deselecting game-confirm enemy casualties would also stop confirming your own automatically selected casualties (sgb)

* europe and pacific map fixes (zero pilot)

Changes for 0.8

* save last used map skin and unit size (beagle)

* add next and back buttons to history (sgb)

* renamed game xml files (sgb)
