@@ -1,3 +1,5 @@
+* put saved games in users home directory (sgb)
+
 * fix map names in revised and lhtr (Jeffrey Henning)
 
 * add lhtr victory citries (sgb)
